# ansible_role_install_secure_archlinux

./: .gitignore  Makefile  README.md  TODO.md  environment.yaml  poetry.toml  pyproject.toml
defaults/: main.yml
files/etc/initcpio/hooks/: clevis
files/etc/initcpio/install/: clevis
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
molecule/default/tests/: test_default.py
tasks/: 0-check-var.yaml  1-partition-disk.yaml  2-pacstrap-os.yaml  3-boot-loader.yaml  4-secure-boot.yaml  5-cloud-init.yaml  main.yaml
templates/: network-config.yaml  network-config.yaml.j2  user-data.yaml  user-data.yaml.j2
tests/: test.yml
tests/unit/: test_example.py
vars/: main.yml
